styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');

@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

@layer base {
   html {
     scroll-behavior: smooth; 
   }
 }

 ol { @apply list-disc }
 

